<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cms.callmanager.activities.InvTrasActivity"
    tools:showIn="@layout/app_bar_inv_tras">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.cms.callmanager.activities.InventoryTransferActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            >


            <android.support.v7.widget.CardView
                android:id="@+id/cv_stock_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/side_nav_bar"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:textSize="@dimen/text_inventory_transfer"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inventory_to_be_received_stock_transfer"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:drawableLeft="@drawable/stock_transfer"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                >


                <LinearLayout
                    android:id="@+id/llReplacement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/side_nav_bar"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:textSize="@dimen/text_inventory_transfer"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/consumption_for_replacement_items"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/replace_item"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/activity_horizontal_margin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                >


                <LinearLayout
                    android:id="@+id/llGoodHub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/side_nav_bar"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:textSize="@dimen/text_inventory_transfer"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/to_for_enginner_to_hub_location_good"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/order"
                        android:drawablePadding="@dimen/activity_horizontal_margin"

                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/side_nav_bar"
                >


                <LinearLayout
                    android:id="@+id/llDefectiveHub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/side_nav_bar"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:textSize="@dimen/text_inventory_transfer"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/to_for_enginner_to_hub_location_defective"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:drawableLeft="@drawable/order"
                        android:drawablePadding="@dimen/activity_horizontal_margin"

                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
